# modular-onboarding-scoring

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
api/: .eslintrc.json  Dockerfile  migrations.json  package-lock.json  package.json  tsconfig.json
api/src/: config.ts  index.ts  logger.ts  server.ts
api/src/controllers/: onboarding.controller.ts
api/src/db/: pool.ts
api/src/db/migrations/: 001_init.sql  runner.ts
api/src/docs/: swagger.ts
api/src/middleware/: apiKey.ts  errorHandler.ts
api/src/routes/: onboarding.routes.ts
api/src/services/: onboarding.service.ts  redis.service.ts  scoring.client.ts
api/src/validation/: onboarding.schema.ts
api/tests/: onboarding.e2e.test.ts
scorer/: Dockerfile  README.md  pyproject.toml
scorer/app/: __init__.py  deps.py  main.py
scorer/app/tests/: test_score.py
scorer/onboarding_scorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
